--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.22",
     "fuse.js": "^7.1.0",
+    "js-yaml": "^4.1.1",
     "next": "^14.2.18",
     "next-auth": "^4.24.13",
     "postcss": "^8.5.6",
@@ -25,7 +26,12 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "tailwindcss": "^3.4.17",
+    "turndown": "^7.2.2",
     "typescript": "^5.9.3",
     "zod": "^4.1.12"
+  },
+  "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
+    "@types/turndown": "^5.0.6"
   }
 }
