--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.22",
     "fuse.js": "^7.1.0",
+    "google-auth-library": "^10.5.0",
+    "googleapis": "^166.0.0",
     "js-yaml": "^4.1.1",
     "next": "^14.2.18",
     "next-auth": "^4.24.13",
