--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^24.10.1",
+    "@types/node": "^24.10.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.22",
     "fuse.js": "^7.1.0",
     "google-auth-library": "^10.5.0",
     "googleapis": "^166.0.0",
+    "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.1",
     "lucide-react": "^0.554.0",
     "next": "^14.2.18",
