--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gcp-cheatsheet",
+  "name": "minimalists-guide-to-the-cloud",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
